--- a/common/TweetDownloader.ipynb
+++ b/common/TweetDownloader.ipynb
@@ -31,7 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "TWITTER_CONSUMER_KEY = '4XWELPdHUTWsSI1BfsAz1VGTf'\n",
+    "TWITTER_CONSUMER_KEY = 'xxxxxxxxxx'\n",
     "TWITTER_CONSUMER_SECRET = 'FwFZtdj34ACn6IhxsUh9spOaH3UL3L0QDDpIJKLOFfdvm0hXIs'\n",
     "TWITTER_ACCESS_KEY = '1199506694830559232-zSdFyPEtu7Vius9pRFnxS7rBTwfvxR'\n",
     "TWITTER_ACCESS_SECRET = 'NLB7F3gMGPSoTq0uB52wb1Fn2VORvAif4FGPaU0JUNeRn'"
